# rag-chunking-strategies

./: .gitattributes  .gitignore  README.md  chunking_strategies.py  corpus_config.py  retrieval_core.py  run_mtrag.py
mtrag-human/: README.md
semeval/: .gitattributes
tcc_implementation/: README.md  corpus_config.py  count_dataset_tokens.py  criar_db.py  eval_a_clapnq_legacy.json  eval_a_fiqa_legacy.json  eval_a_govt_large.json  eval_a_govt_legacy.json  eval_a_govt_small.json  experiments_tcc.py  local_llm.py  main.py  mtrag_query_parse.py  mtrag_subtasks.py  plot_results.py  preds_govt_a.jsonl  preds_govt_b.jsonl  preds_govt_c.jsonl  pyproject.toml  requirements.txt  retrieval_core.py  retrieval_metrics.py  run_gemini_judge.py  run_mtrag.py
tcc_implementation/db/: chroma.sqlite3
tcc_implementation/figures/: human_validation_sample.txt  tabela_gemini_judge.csv  tabela_h3_por_turno.csv  tabela_qwen_judge.csv  tabela_task_a_detalhada.csv  tabela_task_a_por_estrategia.csv  tabela_task_b.csv  tabela_task_c_detalhada.csv  tabela_task_c_por_estrategia.csv
tcc_implementation/requirements/: base-lock.txt  base.txt  dev.txt  eval.txt
tcc_implementation/results/task_a_retrieval/metrics/clapnq/: eval_a_clapnq_large.json  eval_a_clapnq_small.json
tcc_implementation/results/task_a_retrieval/metrics/cloud/: eval_a_cloud_large.json  eval_a_cloud_legacy.json  eval_a_cloud_small.json
tcc_implementation/results/task_a_retrieval/metrics/fiqa/: eval_a_fiqa_large.json  eval_a_fiqa_small.json
tcc_implementation/scripts/: count_dataset_tokens.py  criar_db.py  experiments_tcc.py  main.py  run_mtrag.py  run_ollama_judge.py
tcc_implementation/src/tcc_rag/: __init__.py  corpus_config.py  embeddings_config.py  local_llm.py  mtrag_subtasks.py  rag_prompts.py  retrieval_core.py  retrieval_metrics.py
(+18 files in other folders)
